--- a/homework-04/css/style.css
+++ b/homework-04/css/style.css
@@ -251,3 +251,7 @@ input[type="radio"].visually-hidden {
   color: #ffffff;
   transform: scaleY(1.0062);
 }
+.news-list a:hover,
+.news-list a:focus {
+  color: #1abc9c;
+}
