--- a/homework-05/css/style.css
+++ b/homework-05/css/style.css
@@ -155,13 +155,14 @@ img{
     margin: 0;
     padding: 0;
     padding-top: 92px;
+    padding-bottom: 100px;
     font-size: 0;
     background-color: #e9f0fd;
 }
 .products-list-item {
     float: left;
+    width: 255px;
     margin-right: 30px;
-    margin-bottom: 100px;
     cursor: pointer;
 }
 .products-list-item:nth-child(5){
