--- a/homework-07/css/style.css
+++ b/homework-07/css/style.css
@@ -185,6 +185,8 @@ img{
 .contacts-form {
     padding-top: 75px;
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
     margin-bottom: 30px;
@@ -252,6 +254,7 @@ textarea {
   font-family: "Montserrat Bold", sans-serif;
   font-weight: 700;
   margin: 0 auto;
+  margin-top: 30px;
   text-transform: uppercase;
 }
 .btn:hover,
