--- a/homework-08/css/style.css
+++ b/homework-08/css/style.css
@@ -166,6 +166,7 @@ padding-top: 120px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 60px;
 }
 .partners-title {
     font-size: 22px;
@@ -201,10 +202,12 @@ margin-bottom: 30px;
     /* margin-left: 70px; */
     border-radius: 60px;
 }
-.icon {
+.icon::after{
+  content: '';
   position: absolute;
     right: 0;
     bottom: 0;
+    display: inline-block;
     width: 38px;
     height: 38px;
     border-radius: 50%;
@@ -212,19 +215,19 @@ margin-bottom: 30px;
     background-position: center;
     border: 4px solid #ffffff;
 }
-.Bradley {
+.Bradley::after {
   background-image: url(../img/TV.png);
   background-color: #ff4e50;
 }
-.Lucas {
+.Lucas::after {
   background-image: url(../img/colba.png);
   background-color: #1cd7ad;
 }
-.Heather {
+.Heather::after {
   background-image: url(../img/tea.png);
   background-color: #ffa507;
 }
-.Bradley-girl {
+.Bradley-girl::after {
   background-image: url(../img/telegram.png);
   background-color: #4e73db;
 }
@@ -256,7 +259,6 @@ margin-bottom: 30px;
   display: flex;
   align-items: center;
   justify-content: space-around;
-  margin-bottom: 60px;
 }
 .partners-btn:hover {
  background-color: #ff4e50;
@@ -271,7 +273,7 @@ margin-bottom: 30px;
 
 @media screen and (min-width: 748px){
   .container {
-    min-width: 512px;
+    min-width: 660px;
   }
   .page-nav {
     width: 670px;
@@ -301,6 +303,7 @@ margin-bottom: 30px;
     margin-bottom: 232px;
   }
   .partners {
+    min-width: 492px;
     padding-top: 60px;
   }
   .partners-list {
@@ -308,11 +311,12 @@ margin-bottom: 30px;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
   }
   .partner-item {
     width: 236px;
     height: 230px;
+    margin-left: 20px;
     margin-bottom: 40px;
   }
   .partners-btn {
@@ -333,12 +337,9 @@ margin-bottom: 30px;
   }
 }
 
-@media screen and (min-width:940px){
+@media screen and (min-width:962px){
   .container {
-    min-width: 940px;
-  }
-  .page-nav {
-    width: 940px;
+    width: 942px;
     padding-top: 40px;
   }
   .descr {
@@ -350,5 +351,16 @@ margin-bottom: 30px;
     width: 520px;
     margin: auto;
     padding-top: 160px;
+  }
+  .partner-item {
+    width: 230px;
+    margin: 0;
+    padding: 0;
+  }
+  .partners-btn {
+    margin-top: 40px;
+  }
+  .partners-list {
+    justify-content: space-between;
   }
 }
