--- a/homework-08/css/style.css
+++ b/homework-08/css/style.css
@@ -39,11 +39,6 @@ html{
 *::after{
         box-sizing: inherit;
     }
-body {
-        font-family: 'Roboto', 'Montserrat', sans-serif;
-        color: #858585
-        line-height: 21px;
-      }
 img{
         display: block;
         max-width: 100%;
@@ -57,13 +52,15 @@ background-repeat: no-repeat;
     background-size: cover;
     background-color: #1a1915;
     opacity: 0.8;
+    height: 540px;
 }
 .page-nav {
-  padding-top: 20px;
+  padding-top: 34px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content:center;
+    margin-bottom: 40px;
 }
 .site-navigation {
   display: flex;
@@ -93,10 +90,8 @@ background-repeat: no-repeat;
     font-size: 14px;
     font-family: "Montserrat",sans-serif;
   }
-.logo {
-padding-top: 120px;
-}
-.logo a {
+.logo  {
+  padding-top: 120px;
   text-decoration: none;
   font-size: 20px;
   letter-spacing: 1px;
@@ -106,32 +101,26 @@ padding-top: 120px;
 }
 .container {
   width: 90%;
-  margin:0 auto;
-}
-.title-container {
-  padding-top: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  margin: 0 auto;
 }
 .title {
   text-transform: uppercase;
   text-align: center;
   margin: 0;
   padding: 0;
-  font-size: 29px;
+  font-size: 30px;
   line-height: 1.2;
   color: #ffffff;
   font-family: "Montserrat",sans-serif;
   font-weight: 700;
+  margin-bottom: 23px;
 }
 .descr {
   text-align: center;
   margin: 0;
   padding: 0;
   padding-top: 5%;
-  font-size: 20px;
+  font-size: 18px;
   line-height: 1.2;
   color: #ffffff;
   font-family: 'Roboto',sans-serif;
@@ -146,9 +135,9 @@ padding-top: 120px;
   justify-content: space-around;
   cursor: pointer;
   background-color: #ff4e50;
-  margin-bottom: 138px;
   border-radius: 20px;
   border-color: #ff4e50;
+  margin: auto;
 }
 .main-button:hover{
   background-color: darkred;
@@ -169,11 +158,14 @@ padding-top: 120px;
     padding-bottom: 60px;
 }
 .partners-title {
-    font-size: 22px;
+  margin: 0;
+  font-size: 22px;
   font-family: "Montserrat";
-  color: rgb(51, 51, 51);
-  font-weight: bold;
+  color: #333333;
+  font-weight: 700;
+  line-height: 1.2;
   text-align: center;
+  margin-bottom: 20px;
 }
 .partners-list {
 display: flex;
@@ -197,9 +189,9 @@ margin-bottom: 30px;
   width: 120px;
   height: 120px;
   position: relative;
+  margin-bottom: 18px;
 }
 .partner-photo {
-    /* margin-left: 70px; */
     border-radius: 60px;
 }
 .icon::after{
@@ -232,20 +224,22 @@ margin-bottom: 30px;
   background-color: #4e73db;
 }
 .partner-name {
-  padding: 18px 0;
   margin: 0;
+  padding: 0;
   font-size: 14px;
   font-family: "Montserrat";
   color: rgb(51, 51, 51);
   font-weight: bold;
-  color: #333333;
+  line-height: 1.2;
+  margin-bottom: 18px;
 }
 .partner-description {
   margin: 0;
   padding: 0;
-  font-size: 13px;
+  font-size: 14px;
     font-family: "Roboto";
     color: rgb(102, 102, 102);
+    line-height: 1.2;
     text-align: center;
 
 }
@@ -269,33 +263,35 @@ margin-bottom: 30px;
   color: #ff4e50;
   font-family: "Montserrat",sans-serif;
   font-weight: 700;
+  line-height: 1.2;
+  text-align: center;
 }
 
 @media screen and (min-width: 748px){
   .container {
-    min-width: 660px;
+    min-width: 600px;
+  }
+  .page-header {
+    height: 700px;
   }
   .page-nav {
     width: 670px;
     margin: 0 auto;
     padding-top: 40px;
+    margin-bottom: 150px;
     flex-direction: row-reverse;
     align-items: center;
     justify-content: space-between;
   }
-  .logo {
+.logo {
   padding: 0;
-  /* letter-spacing: 1px; */
-  }
-  .title-container {
-    padding-top: 160px;
   }
   .title {
     font-size: 52px;
+    margin-bottom: 40px;
   }
   .descr {
-    font-size: 52px;
-    padding-top: 44px;
+    font-size: 24px;
     margin-bottom: 40px;
   }
   .main-button {
@@ -304,19 +300,20 @@ margin-bottom: 30px;
   }
   .partners {
     min-width: 492px;
-    padding-top: 60px;
+    padding-top: 76px;
+    margin-bottom: 40px;
+  }
+  .partners-title {
+    margin-bottom: 38px;
   }
   .partners-list {
-    padding-top: 36px;
     flex-direction: row;
     flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
+    align-items: flex-start;
+    justify-content: space-around;
   }
   .partner-item {
     width: 236px;
-    height: 230px;
-    margin-left: 20px;
     margin-bottom: 40px;
   }
   .partners-btn {
@@ -342,18 +339,27 @@ margin-bottom: 30px;
     width: 942px;
     padding-top: 40px;
   }
+  .page-nav{
+    width: 940px;
+  }
+  .title{
+    width: 500px;
+    margin: auto;
+    margin-bottom: 45px;
+  }
   .descr {
-    padding: 40px 0;
-    margin: 0;
-    font-size: 24px;
+    margin-bottom: 40px;
   }
   .title-container {
     width: 520px;
     margin: auto;
-    padding-top: 160px;
+  }
+  .partners {
+    padding-top: 70px;
+    margin-bottom: 72px;
   }
   .partner-item {
-    width: 230px;
+    width: 220px;
     margin: 0;
     padding: 0;
   }
