--- a/homework-11/src/sass/components/team.scss
+++ b/homework-11/src/sass/components/team.scss
@@ -8,42 +8,48 @@
     color: $team-descr-color;
     line-height: 1.6;
 }
+
 .team__list {
     padding: 0;
     margin: 0;
     @include center-flex ('ver');
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     list-style: none;
 }
+
 .team__list-item {
     width: 380px;
 }
+
 .team__blue-screen {
     background-color: $team-screen-color;
     width: 380px;
     height: 470px;
 }
+
 .team__list-item {
     width: 380px;
     height: 470px;
-    -webkit-transition: all 200ms linear ;
-    -o-transition: all 200ms linear ;
-    transition: all 200ms linear ;
+    -webkit-transition: all 200ms linear;
+    -o-transition: all 200ms linear;
+    transition: all 200ms linear;
 
     &:hover {
-        -webkit-transform:translate(-10px,-10px);
-            -ms-transform:translate(-10px,-10px);
-                transform:translate(-10px,-10px);
+        -webkit-transform: translate(-10px, -10px);
+        -ms-transform: translate(-10px, -10px);
+        transform: translate(-10px, -10px);
     }
-    &:hover .team__overlay{
+
+    &:hover .team__overlay {
         opacity: 1;
-        background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(252,227,138,0.9)), to(rgba(243,129,129,0.9)));
-        background-image: -o-linear-gradient(bottom, rgba(252,227,138,0.9) 0%, rgba(243,129,129,0.9) 100%);
-        background-image: linear-gradient(0deg, rgba(252,227,138,0.9) 0%, rgba(243,129,129,0.9) 100%);
+        background-image: -webkit-gradient(linear, left bottom, left top, from(rgba(252, 227, 138, 0.9)), to(rgba(243, 129, 129, 0.9)));
+        background-image: -o-linear-gradient(bottom, rgba(252, 227, 138, 0.9) 0%, rgba(243, 129, 129, 0.9) 100%);
+        background-image: linear-gradient(0deg, rgba(252, 227, 138, 0.9) 0%, rgba(243, 129, 129, 0.9) 100%);
     }
 }
+
 .team__overlay {
     @include center-flex ('all');
     position: absolute;
@@ -51,30 +57,33 @@
     height: 470px;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
     -o-border-image: none;
-       border-image: none;
+    border-image: none;
     opacity: 0;
     -webkit-transition: all 200ms linear;
     -o-transition: all 200ms linear;
     transition: all 200ms linear;
 }
-.icon-container {
-display: block;
-width: 56px;
-height: 56px;
-margin-right: 2px;
-background-color: $hover-color;
-cursor: pointer;
 
-&:last-child {
-    margin-right: 0;
+.icon-container {
+    display: block;
+    width: 56px;
+    height: 56px;
+    margin-right: 2px;
+    background-color: $hover-color;
+    cursor: pointer;
+
+    &:last-child {
+        margin-right: 0;
+    }
+
+    &:hover {
+        background-color: $decoration-color;
+    }
 }
-&:hover{
-    background-color: $decoration-color;
-}
-}
+
 .overlay-icon {
     display: block;
     margin: 0;
@@ -83,14 +92,17 @@ cursor: pointer;
     width: 56px;
     height: 56px;
 }
-.icon-container:hover .overlay-icon{
+
+.icon-container:hover .overlay-icon {
     fill: $main-color;
 }
+
 .team__text {
     margin: 0;
     padding: 0;
     text-align: center;
 }
+
 .team__name {
     padding-top: 30px;
     font-family: $main-font-stack;
@@ -99,7 +111,8 @@ cursor: pointer;
     line-height: 1.2;
     color: $title-color;
 }
-.team__position{
+
+.team__position {
     font-family: $item-descr-font;
     font-style: italic;
     font-weight: 300;
