--- a/homework-11/src/sass/variables.scss
+++ b/homework-11/src/sass/variables.scss
@@ -1,7 +1,9 @@
 // FONTS
-$main-font-stack:'Montserrat', sans-serif;
+$main-font-stack:'Montserrat',
+sans-serif;
 $descr-font: "Kaushan Script";
-$item-descr-font: 'Roboto', sans-serif;
+$item-descr-font: 'Roboto',
+sans-serif;
 // COLORS
 $main-color: #fff;
 $hover-color: #fce38a;
@@ -13,5 +15,3 @@ $team-screen-color: #95e1d3;
 $team-position-color: #bababa;
 $decoration-color-lighter: #f6a1a1;
 $border-color: #d9d9d9;
-
-
